# a-hundred-days-of-code

./: README.md  pyproject.toml
day-25/: main.py
day-32/: main.py
day-32/birthday-wisher/: birthdays.csv  main.py
day-33/: iss-mail.py  main.py
day-34/: main.py  ui.py
day-35/: main.py
day-48/: interaction.py  main.py
day-55/: hello.py
day-56/my-personal-site/: server.py
day-56/my-personal-site/templates/: index.html  muromi.html
day-56/name-card/: app.py
day-57/blog-start/: main.py
day-57/blog-start/templates/: index.html
day-57/practice/: main.py
day-57/practice/templates/: blog.html  guess.html  index.html
day-58/: index.html
day-58/tindog/: index.html
day-58/tindog/css/: styles.css
