[tool.poetry]
name = "a-hundred-days-of-code"
version = "0.1.0"
description = ""
authors = ["devMuromi <devmuromi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
